# /py/pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "border-kit"
version = "0.1.0"
description = "Lightweight U.S. state border lookup utilities for Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OpenAI" }
]
keywords = ["states", "borders", "neighbors", "geography", "usa"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["border_kit*"]

[tool.setuptools.package-data]
border_kit = ["py.typed"]
